@@ -1,6 +1,8 @@
 Release Note
 
 * current
+  * fixed to increment nFilesUsed when merging is killed before merge generation
+  * added protection against orphaned merge jobs
   * using rucio api for _dis
   * fixed event-picking for rucio
   * fixed DDM for unicode
